style.css
:root {
  --federal-blue: #03045eff;
  --marian-blue: #023e8aff;
  --honolulu-blue: #0077b6ff;
  --blue-green: #0096c7ff;
  --pacific-cyan: #00b4d8ff;
  --vivid-sky-blue: #48cae4ff;
  --non-photo-blue: #90e0efff;
  --non-photo-blue-2: #ade8f4ff;
  --light-cyan: #caf0f8ff;
  --oxford-blue: #00132dff;
  --oxford-blue-2: #00193bff;
  --oxford-blue-3: #001e45ff;
  --oxford-blue-4: #002657ff;
  --berkeley-blue: #002d67ff;
  --yale-blue: #00377eff;
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-family: "Source Code Pro", monospace;
  font-size: 1.6rem;
  color: var(--light-cyan);
  background-color: var(--oxford-blue);
}

#background {
  height: 100vh;
  background: repeat radial-gradient(#00193b99 9%, transparent 9%);
  background-position: 0% 0%;
  background-size: 50px 50px;
}

#input-image-label {
  display: block;
  text-align: center;
}
#input-image {
  display: block;
  margin: 0 auto;
  background-color: var(--honolulu-blue);
  border-radius: 5px;

  margin-bottom: 1rem;
}

#input-image-preview {
  pointer-events: none;
  display: block;
  margin: 0 auto;

  max-width: 45vw;
  max-height: 90vh;

  display: none;
}

#dots-area {
  pointer-events: none;
  position: relative;
  display: block;
  background-color: black;

  max-height: 90vh;
  max-width: 90vw;

  margin: 0 auto;
}

.preview-images {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1;
  grid-gap: 1rem;
}

.settings {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-bottom: 1rem;
}

@media (width < 1000px) {
  /* .preview-images {
    grid-template-columns: 1fr;
  }

  #input-image-preview {
    max-width: 90vw;
    max-height: 90vh;
  }

  #dots-area {
    max-width: 90vw;
    max-height: 90vh;
  } */
}

.hidden {
  display: none !important;
}

